exports[`invalid(1): {\"dependencies\": {\"foo\": \"latest\"}} 1`] = `

[Input]
  1 | {"dependencies": {"foo": "latest"}}

`;

exports[`invalid(1): {\"dependencies\": {\"foo\": \"latest\"}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "latest"}}
    |                          ^^^^^^^^ Dependency \`foo\` uses the dist-tag \`latest\`; pin a version range for reproducible installs.

`;

exports[`invalid(2): {\"dependencies\": {\"foo\": \"next\"}} 1`] = `

[Input]
  1 | {"dependencies": {"foo": "next"}}

`;

exports[`invalid(2): {\"dependencies\": {\"foo\": \"next\"}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "next"}}
    |                          ^^^^^^ Dependency \`foo\` uses the dist-tag \`next\`; pin a version range for reproducible installs.

`;

exports[`invalid(3): {\"devDependencies\": {\"foo\": \"beta\"}} 1`] = `

[Input]
  1 | {"devDependencies": {"foo": "beta"}}

`;

exports[`invalid(3): {\"devDependencies\": {\"foo\": \"beta\"}} 2`] = `

Message:
> 1 | {"devDependencies": {"foo": "beta"}}
    |                             ^^^^^^ Dependency \`foo\` uses the dist-tag \`beta\`; pin a version range for reproducible installs.

`;
